login前后端逻辑完成

--- a/src/main/webapp/pages/enroll.html
+++ b/src/main/webapp/pages/enroll.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>XianLin|注册</title>
-    <link rel="shortcut icon" href="XianLinICO.ico" type="image/x-icon">
+    <link href="../img/XianLinICO.ico" rel="shortcut icon" type="image/x-icon">
     <!--引入css-->
-    <link href="css/enroll.css" rel="stylesheet">
-    <script src="js/vue.js"></script>
-    <link href="element-ui/lib/theme-chalk/index.css" rel="stylesheet">
-    <script src="element-ui/lib/index.js"></script>
-    <script src="js/axios.min.js"></script>
+    <link href="../css/enroll.css" rel="stylesheet">
+    <script src="../js/vue.js"></script>
+    <link href="../element-ui/lib/theme-chalk/index.css" rel="stylesheet">
+    <script src="../element-ui/lib/index.js"></script>
+    <script src="../js/axios.min.js"></script>
 </head>
 <body>
 <div id="app">
@@ -124,6 +124,6 @@
 </div>
 <!--引入框架-->
 
-<script src="js/enroll.js"></script>
+<script src="../js/enroll.js"></script>
 </body>
 </html>
