--- a/src/main/webapp/pages/music-player.html
+++ b/src/main/webapp/pages/music-player.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>歌曲搜索</title>
-    <link href="XianLinICO.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="css/music-player.css" rel="stylesheet">
+    <link href="../img/XianLinICO.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="../css/music-player.css" rel="stylesheet">
 </head>
 <!--<body>-->
 <body>
@@ -113,13 +113,13 @@
 
 
 </div>
-<script src="js/vue.js"></script>
+<script src="../js/vue.js"></script>
 <!-- 引入样式 -->
-<link href="element-ui/lib/theme-chalk/index.css" rel="stylesheet">
+<link href="../element-ui/lib/theme-chalk/index.css" rel="stylesheet">
 <!-- 引入组件库 -->
-<script src="element-ui/lib/index.js"></script>
+<script src="../element-ui/lib/index.js"></script>
 <!--引入axios文件-->
-<script src="js/axios.min.js"></script>
-<script src="js/music-player.js"></script>
+<script src="../js/axios.min.js"></script>
+<script src="../js/music-player.js"></script>
 </body>
 </html>
