--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <title>XianLin|登录</title>
-    <link rel="shortcut icon" href="XianLinICO.ico" type="image/x-icon">
+    <link href="../img/XianLinICO.ico" rel="shortcut icon" type="image/x-icon">
     <!--引入CSS-->
-    <link href="css/login.css" rel="stylesheet">
+    <link href="../css/login.css" rel="stylesheet">
 
-    <script src="js/vue.js"></script>
-    <link href="element-ui/lib/theme-chalk/index.css" rel="stylesheet">
-    <script src="element-ui/lib/index.js"></script>
-    <script src="js/axios.min.js"></script>
+    <script src="../js/vue.js"></script>
+    <link href="../element-ui/lib/theme-chalk/index.css" rel="stylesheet">
+    <script src="../element-ui/lib/index.js"></script>
+    <script src="../js/axios.min.js"></script>
 </head>
 <body>
 <div id="app">
@@ -30,9 +30,9 @@
                                     <el-form :model="form" ref="form" label-width="100px" class="demo-ruleForm">
                                         <el-form-item
                                                 label="QQ"
-                                                prop="QQ"
+                                                prop="userQQ"
                                                 :rules="[{ required: true, message: 'QQ不能为空'},{ type: 'number', message: 'QQ必须为数字值'}]">
-                                            <el-input type="QQ" v-model.number="form.QQ" autocomplete="off"
+                                            <el-input autocomplete="off" type="userQQ" v-model.number="form.userQQ"
                                                       placeholder="请输入QQ号"></el-input>
                                         </el-form-item>
                                     </el-form>
@@ -41,9 +41,9 @@
                                     <el-form :model="form" ref="form" label-width="100px" class="demo-ruleForm">
                                         <el-form-item
                                                 label="密码"
-                                                prop="password"
+                                                prop="userPassword"
                                                 :rules="[{ required: true, message: '密码不能为空'}]">
-                                            <el-input type="password" v-model="form.password" autocomplete="off"
+                                            <el-input autocomplete="off" type="userPassword" v-model="form.userPassword"
                                                       placeholder="请输入密码(并非QQ密码)"></el-input>
                                         </el-form-item>
                                     </el-form>
@@ -53,7 +53,7 @@
                     </el-row>
                     <el-form-item>
                         <template>
-                            <el-checkbox v-model="form.type">记住我,下次免登陆</el-checkbox>
+                            <el-checkbox v-model="loginType">记住我,下次免登陆</el-checkbox>
                         </template>
                     </el-form-item>
                     <el-form-item>
@@ -76,7 +76,7 @@
     </el-container>
 
     <!--引入Vue对象-->
-    <script src="js/login.js"></script>
+    <script src="../js/login.js"></script>
 </div>
 </body>
 </html>
