--- a/src/main/webapp/pages/enroll.html
+++ b/src/main/webapp/pages/enroll.html
@@ -22,18 +22,18 @@
             <el-aside width="70%"></el-aside>
             <el-main>
                 <el-header><h1>注册</h1></el-header>
-                <el-form ref="form" :model="form" label-width="80px">
+                <el-form :model="userForm" label-width="80px" ref="userForm">
                     <el-row>
                         <el-col :span="21">
                             <div class="grid-content bg-purple-dark">
-                                <el-form label="QQ">
+                                <el-form label="userQQ">
                                     <!--                    <el-input v-model="form.QQ" placeholder="请输入内容"></el-input>-->
-                                    <el-form :model="form" ref="form" label-width="100px" class="demo-ruleForm">
+                                    <el-form :model="userForm" class="demo-ruleForm" label-width="100px" ref="userForm">
                                         <el-form-item
                                                 label="QQ"
-                                                prop="QQ"
+                                                prop="userQQ"
                                                 :rules="[{ required: true, message: 'QQ不能为空'},{ type: 'number', message: 'QQ必须为数字值'}]">
-                                            <el-input type="QQ" v-model.number="form.QQ" autocomplete="off"
+                                            <el-input autocomplete="off" type="userQQ" v-model.number="userForm.userQQ"
                                                       placeholder="请输入QQ号" @blur="obtain"></el-input>
                                         </el-form-item>
                                     </el-form>
@@ -76,28 +76,29 @@
             <el-col :span="21">
                 <div class="grid-content bg-purple-dark">
                     <el-form label="name">
-                        <el-form :model="form" ref="form" label-width="100px" class="demo-ruleForm">
+                        <el-form :model="userForm" class="demo-ruleForm" label-width="100px" ref="userForm">
                             <el-form-item
                                     label="QQ:">
-                                {{form.QQ}}
+                                {{userForm.userQQ}}
                             </el-form-item>
                         </el-form>
                         <!--                    <el-input v-model="form.QQ" placeholder="请输入内容"></el-input>-->
-                        <el-form :model="UserInfo" ref="UserInfo" label-width="100px" class="demo-ruleForm">
+                        <el-form :model="userForm" class="demo-ruleForm" label-width="100px" ref="userForm">
                             <el-form-item
                                     label="昵称"
-                                    prop="name"
+                                    prop="userName"
                                     :rules="[{ required: true, message: '昵称不能为空'}]">
-                                <el-input type="name" v-model.number="UserInfo.name" autocomplete="off"
-                                          placeholder="请输入昵称" ></el-input>
+                                <el-input autocomplete="off" type="userName" v-model.number="userForm.userName"
+                                          placeholder="请输入昵称"></el-input>
                             </el-form-item>
 
                         </el-form>
-                        <el-form :model="UserInfo" ref="UserInfo" label-width="100px" class="demo-ruleForm">
+                        <el-form :model="userForm" class="demo-ruleForm" label-width="100px" ref="userForm">
                             <el-form-item
                                     label="头像:">
                                 <div class="demo-basic--circle">
-                                    <div class="block"><el-avatar shape="square" :size="100" :src="UserInfo.imgurl"></el-avatar></div>
+                                    <div class="block"><el-avatar :size="100" :src="userForm.imgUrl"
+                                                                  shape="square"></el-avatar></div>
                                 </div>
                             </el-form-item>
                         </el-form>
